testchart/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: userservice
        image: softloft/ministore-userservices:1.11
        ports:
        - containerPort: 8888
      - name: authservice
        image: softloft/ministore-authservices:latest
        ports:
        - containerPort: 8889
