testchart/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ministore7
spec:
  ports:
  - port: 8884
    targetPort: 8884
    protocol: TCP
    name: http
  - port: 8880
    targetPort: 8880
    protocol: TCP
    name: http2
  - port: 50051
    targetPort: 50051
    protocol: TCP
    name: http3
  selector:
    app: ministore7
