testchart/templates/ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
# kind: Ingress

# metadata:
#   name: ministore5
#   annotations:
#     kubernetes.io/ingress.class: traefik
#     #nginx.ingress.kubernetes.io/rewrite-target: /
#     # ingress.bluemix.net/rewrite-path: "serviceName=userservice rewrite=/"
#     # nginx.org/rewrites: serviceName=userservice rewrite=/
#     # nginx.org/ssl-services: userservice
# spec:
#   rules:
#   - host: mini.info
#     http:
#       paths:
#       - path: /
#         backend:
#           serviceName: ministore7
#           servicePort: 8887
# ---
apiVersion: networking.k8s.io/v1beta1 # for versions before 1.14 use extensions/v1beta1
kind: Ingress

metadata:
  name: ministore7
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: http
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: face-location
    http:
      paths:
      - path: /
        backend:
          serviceName: ministore7
          servicePort: 8884
  - host: face-user
    http:
      paths:
      - path: /
        backend:
          serviceName: ministore7
          servicePort: 8883
  - host: face-auth
    http:
      paths:
      - path: /
        backend:
          serviceName: ministore7
          servicePort: 8880
  - host: face-middle
    http:
      paths:
      - path: /
        backend:
          serviceName: ministore7
          servicePort: 8888
  - host: face-share
    http:
      paths:
      - path: /
        backend:
          serviceName: ministore7
          servicePort: 50051
